Project

General

Profile

Actions

Bug #13476

closed

zfs: multiply-defined symbols

Added by Toomas Soome over 2 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
zfs - Zettabyte File System
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 10:

    ld: fatal: symbol 'zfs_dvnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: symbol 'zfs_fvnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: symbol 'zfs_symvnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: symbol 'zfs_sharevnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: symbol 'zfs_xdvnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: symbol 'zfs_evnodeops' is multiply-defined:
            (file obj64/zfs_znode.o type=OBJT; file obj64/zfs_vnops.o type=OBJT);
    ld: fatal: file processing errors. No output written to obj64/zfs
    *** Error code 1
    dmake: Fatal error: Command failed for target `obj64/zfs'
    Current working directory /code/illumos-gate/usr/src/uts/intel/zfs

We have those symbols defined in two files, only keep one.

Testing done: build/install/boot.

Actions #1

Updated by Toomas Soome over 2 years ago

  • Description updated (diff)
Actions #2

Updated by Electric Monk over 2 years ago

  • Gerrit CR set to 1186
Actions #3

Updated by Electric Monk over 2 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 99d0d3f582c9145a267ddfd9fef778459d415339

commit  99d0d3f582c9145a267ddfd9fef778459d415339
Author: Toomas Soome <tsoome@me.com>
Date:   2021-02-12T15:39:25.000Z

    13476 zfs: multiply-defined symbols
    Reviewed by: Robert Mustacchi <rm@fingolfin.org>
    Reviewed by: Andy Fiddaman <andy@omnios.org>
    Approved by: Gordon Ross <gordon.w.ross@gmail.com>

Actions

Also available in: Atom PDF